unpackaged/main/default/objects/Status_Change_Notification__e/Status_Change_Notification__e.object-meta.xml
<CustomObject>
    <label>Status Change Notification</label>
    <pluralLabel>Status Change Notifications</pluralLabel>
</CustomObject>