unpackaged/main/default/objects/Status_Change_Notification__e/fields/Address_Changed__c.field-meta.xml
<CustomField>
    <fullName>Address_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked true of address of an SA changes</description>
    <label>Address Changed</label>
    <type>Checkbox</type>
</CustomField>