unpackaged/main/default/objects/Status_Change_Notification__e/fields/Breakdown_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked indicates that this is a breakdown appointment</description>
    <label>Breakdown Appointment</label>
    <type>Checkbox</type>
</CustomField>